# STARE

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  DEVELOPMENT-NOTES  INSTALL  LICENSE  Makefile  Makefile.generic  NOTES  README  README-DEVELOP-CEVELOP  README.md  READ_ME  SpatialIndex.dep  SpatialIndex.opt  SpatialIndex.vcproj  VERSION  cc_aux.c  clean.cmd  cmake_uninstall.cmake.in  configure  correctVarout  darwin.sed  example  filter  filter.cpp  gr2  gr3  intersect  linux.sed  memleak.c  mktarball.csh  sqlExample.dep  sqlExample.dsp  sqlExample.dsw  sqlExample.vcproj  testTiny
.externalToolBuilders/: .gitignore
.github/workflows/: cmake.yml
CVS/: Entries  Repository
Unused/: SpatialIndex.dsp  SpatialIndex.dsw  SpatialIndex.mak  SpatialIndex.sln  correctTinyOut  correctTinyVarout  gr1  intersect  tesselateTrapezoid
Unused/app/: fillout.c  htmTest.cpp  range2list.c  simpleIntersect.cpp  test1.cpp  timeHTM.cpp  toid.c  toname.c
app/: .gdb_history  CMakeLists.txt  Makefile  echoDomain.cpp  example.cpp  htmTest.cpp  htmlookup.c  intersect.cpp  lookup.cpp  lookupInteractive.cpp  lookupPolygon.cpp  lookupSpatial.cpp  lookupTemporal.cpp  lookup_point.cpp  lowlevel-lookup-tool.cpp  opendapTest.cpp  opendapTester.cpp  sqlExample.cpp  sqlExample0.cpp  stareTool.cpp  tesselateTrapezoid.cpp  test1.cpp  timeHTM.cpp  xptest.cpp
app/CVS/: Entries  Repository
app/XP/: XP_Fast.Cpp
contrib/: README
contrib/python/: .gitignore  example-1.py  example-viz-1.py  example-viz-2.py  example-viz-3.py  example.py  example1.py  test.py
contrib/scidb-hstm-TRMM-binary-tools/: testReadBinaryFilesAndCalculateSpatiotemporalIndexes.cpp  testWriteBinaryTRMM-1.cpp
contrib/scidb-hstm-cli-tools/: .gitignore  children.cpp  compile  parent.cpp  siblings.cpp  winter2010blizzard_csv_to_STARE.cpp
documentation/: .gitignore  CMakeLists.txt  Doxyfile.in  HtmRangeGenerationAndIntersection.odp  HtmRangeGenerationAndIntersection.pptx  Notes.ods  hstm.doxyfile  mainpage.dox
htmIntersect/: htmIntersect.dsp
htmIntersect/CVS/: Entries  Repository
include/: .gitignore  BitField.h  BitShiftNameEncoding.h  CMakeLists.txt  EmbeddedLevelNameEncoding.h  General.h  HTMSubTree.h  HTMSubTreeNode.h  HstmIndex.h  HstmRange.h  HtmRange.h  HtmRangeIterator.h  HtmRangeMultiLevel.h  HtmRangeMultiLevelIterator.h  Htmio.h  KeyPair.h  NameEncoding.h  PySTARE.h  PySTARE1.h  RangeConvex.h  RangeConvex.hxx  STARE.h  STARE.h.in  SkipList.h  SkipListElement.h  SpatialConstraint.h  SpatialConstraint.hxx  SpatialConvex.hxx  SpatialDomain.h  SpatialException.h  SpatialGeneral.h  SpatialIndex.h  SpatialIndex.hxx  SpatialInterface.h  SpatialInterface.hxx  SpatialPolygon.h  SpatialRange.h  SpatialRotation.h  SpatialVector.h  SpatialVector.hxx  (+11 more)
include/CVS/: Entries  Repository
lib/CVS/: Entries  Repository
packaging/: CMakeLists.txt  STAREConfig.cmake
sql/: htmversion.sql  install.sql  testers.sql  tiny.sql  uninstall.sql
sql/CVS/: Entries  Repository
src/: .gitignore  BitShiftNameEncoding.C  CMakeLists.txt  EmbeddedLevelNameEncoding.C  General.cpp  HTMSubTree.cpp  HTMSubTreeNode.cpp  HstmRange.C  HstmRange.cpp  HtmRange.cpp  HtmRangeIterator.cpp  HtmRangeMultiLevel.cpp  HtmRangeMultiLevelIterator.cpp  Htmio.cpp  Makefile  NOTES  NameEncoding.C  NameEncoding.cpp  PySTARE.cpp  PySTARE.i  PySTARE1.cpp  PySTARE1.i  RangeConvex.cpp  RangeNonConvex.cpp  SSTARE.cpp  STARE.C  STARE.cpp  SkipList.cpp  SkipListElement.cpp  SpatialConstraint.cpp  SpatialDomain.cpp  SpatialEdge.cpp  SpatialException.cpp  SpatialGeneral.C  SpatialGeneral.cpp  SpatialIndex.cpp  SpatialInterface.cpp  SpatialPolygon.cpp  SpatialRange.cpp  SpatialRotation.C  (+9 more)
src/CVS/: Entries  Repository
src/packaging/: CMakeLists.txt
tests/: t0  t0.convexes  t1  t1.hid  t2  t5.convexes  t6  t6.convexes  t6.hid  t7.convexes  t7.hid
tests/CUTE/: .gitignore  AdaptSpatialResolutionEstimates_test.cpp  CMakeLists.txt  EmbeddedLevelNameEncoding_test.cpp  Makefile  STARE_Covers_test.cpp  STARE_Temporal_test.cpp  STARE_test.cpp  SpatialFailure_test.cpp  SpatialIndex_test.cpp  SpatialInterface_test.cpp  SpatialPolygon_test.cpp  SpatialRange_test.cpp  SpatialRotation_test.cpp  SpatialVector_test.cpp  SpatioTemporalUsage_test.cpp  TemporalIndex_test.cpp  Test.cpp  Test.h
tests/CUTE/polygons/0/: 0.csv  1.csv  2.csv  3.csv
tests/CUTE/polygons/caribbean/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  (+818 more)
tests/CUTE/polygons/san_joaquin/: san_joaquin.csv  san_joaquin_simple.csv
tests/CUTE/polygons/world_04/: Angola.csv  Antarctica.csv  Austria.csv  Belize.csv  Benin.csv  Bhutan.csv  Bolivia.csv  Bosnia and Herz..csv  Botswana.csv  Brazil.csv  Bulgaria.csv  Cameroon.csv  Canada.csv  Chad.csv  Chile.csv  Colombia.csv  Costa Rica.csv  Croatia.csv  Cuba.csv  Cyprus.csv  Côte d'Ivoire.csv  Djibouti.csv  Ecuador.csv  Egypt.csv  El Salvador.csv  Eq. Guinea.csv  Falkland Is..csv  Finland.csv  France.csv  Gabon.csv  Gambia.csv  Germany.csv  Ghana.csv  Guinea-Bissau.csv  Guinea.csv  Guyana.csv  Honduras.csv  Hungary.csv  India.csv  Indonesia.csv  (+52 more)
tests/CUTE/polygons/world_07/: Afghanistan.csv  Albania.csv  Algeria.csv  Argentina.csv  Armenia.csv  Australia.csv  Azerbaijan.csv  Bahamas.csv  Bangladesh.csv  Belarus.csv  Belgium.csv  Brunei.csv  Burkina Faso.csv  Burundi.csv  Cambodia.csv  Central African Rep..csv  China.csv  Congo.csv  Czechia.csv  Dem. Rep. Congo.csv  Denmark.csv  Dominican Rep..csv  Eritrea.csv  Estonia.csv  Ethiopia.csv  Fiji.csv  Fr. S. Antarctic Lands.csv  Georgia.csv  Greece.csv  Greenland.csv  Guatemala.csv  Haiti.csv  Iceland.csv  Iraq.csv  Israel.csv  Italy.csv  Jamaica.csv  Kazakhstan.csv  Kosovo.csv  Kuwait.csv  (+45 more)
tests/CVS/: Entries  Root  (+1 more)
tests/python/: CMakeLists.txt  test1.py
tests/python/__pycache__/: .gitignore
unix/: .gitignore
(+19 files in other folders)
